variables.Variables.scala.error
Compilation error:
Variables:1: error: not found: value i
var pas=0;i=0
          ^