variables.Variables.scala.code
var pas=0;i=0

while(!isOverBaggle()){forward();pas=pas+1}
pickupBaggle()
for (i<- 0 to pas) backward()